--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .pause {
+        animation-play-state: paused;
+    }
+    
+    .circle {
+        clip-path: circle();
+    }
+    
+    .blur-backdrop {
+        backdrop-filter: blur(20px); 
+        -webkit-backdrop-filter: blur(20px);
+    }
+}
