--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,3 +16,22 @@
         -webkit-backdrop-filter: blur(20px);
     }
 }
+
+@font-face {
+    font-family: Jersey;
+    src: url('/fonts/Jersey15-Regular.ttf');
+    font-display: swap;
+}
+
+@font-face {
+    font-family: Raleway;
+    src: url('/fonts/Raleway-Regular.ttf');
+    font-display: swap;
+}
+
+@font-face {
+    font-family: Raleway;
+    src: url('/fonts/Raleway-ExtraBold.ttf');
+    font-weight: 800;
+    font-display: swap;
+}
